# desi-data-explorer

./: .gitignore  CLAUDE.md  README.md  bugs.md  context.md  desi_data_access.py  pyproject.toml  tasks.md  test_wedge.py
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  fastspecfit_performance_resolution.md  project_overview.md  suggested_commands.md  task_completion_workflow.md  tech_stack.md
examples/: galaxy_wedge_plot.py  sfr_emission_plots.py
src/: __init__.py  desi_data_access.py
